--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -46,8 +46,8 @@
           <tr ng-repeat="expense in event.budget">
             <td>{{expense.title}}</td>
             <td>{{expense.amount}}</td>
-            <td><button ng-show="deleteExpenditure(expense)" class="btn btn-danger" >Delete</button></td>
-            <td><button ng-show="editExpenditure(expense)" class="btn btn-info" >Edit</button></td>
+            <td><button ng-show="canDelete(expense)" ng-click="deleteExpenditure(expense)" class="btn btn-danger" >Delete</button></td>
+            <td><button ng-show="canEdit(expense)" ng-click="editExpenditure(expense)" class="btn btn-info" >Edit</button></td>
           </tr>
         </tbody>
       </table>
