--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -32,6 +32,10 @@
       </form>
     </div>
 
+    <div class="alert alert-warning" ng-show="errorMessage">
+      <strong>Warning!</strong> The current cost exceeds the budget goal.
+    </div>
+
     <div class="row">
       <table class="table table-hover col-md-10 col-md-offset-1">
         <thead>
