--- a/client/app/client/partials/welcome/welcome.html
+++ b/client/app/client/partials/welcome/welcome.html
@@ -34,7 +34,9 @@
         <div class = "col-md-12">
           <div class = "col-md-6">
             <h4 align="center">Your Budget</h4>
-            <nvd3 options="options" data="ev.budget"></nvd3>
+            <div id="chart">
+              <svg></svg>
+            </div>
           </div>
           <!-- Display Guest List -->
           <div class = "col-md-6" ng-init="sortGuest='name'">
