--- a/client/app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.html
+++ b/client/app/superAdmin/partials/manageEvent/manageEventModal/manageEventModal.html
@@ -88,7 +88,7 @@
           </div>
         </form>
 
-        <div class="row">
+        <div class="row"  style="overflow: auto">
           <table class = "col-md-12 table table-hover" ng-show="hasItems(event.toDoList)">
             <thead>
               <tr>
@@ -142,7 +142,7 @@
           </div>
         </form>
 
-        <div class="row">
+        <div class="row"  style="overflow: auto">
           <table class = "col-md-12 table table-hover" ng-show="hasItems(event.budget)">
             <thead>
               <tr>
@@ -185,7 +185,7 @@
             <button type="submit" class="btn btn-success" ng-click="addSubcontractor(addSubcon) ? addSubcon = null : null">+</button>
           </div>
         </form>
-        <div class="row">
+        <div class="row"  style="overflow: auto">
           <table class = "col-md-12 table table-hover" ng-show="hasItems(event.subcons)">
             <thead>
               <tr>
@@ -240,7 +240,7 @@
           </div>
         </form>
 
-        <div class="row">
+        <div class="row"  style="overflow: auto">
           <table class = "col-md-12 table table-hover" ng-show="hasItems(event.guests)" style="word-wrap: break-word">
             <thead>
               <tr>
