--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -17,23 +17,45 @@
       <form ng-submit="addExpenditure()" class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
         <p>Add Expenditure:</p>
         <div class="form-group">
-          <label class="sr-only" for="inputExpenditure">Expenditure</label>
+          <label for="inputExpenditure">Expenditure</label>
           <input type="text" ng-model="title" class="form-control" id="inputExpenditure" placeholder="Expenditure">
         </div>
         <div class="form-group" id="price-input">
-          <label class="sr-only" for="inputAmount">Amount</label>
+          <label for="inputAmount">Amount</label>
           <div class="input-group">
             <div class="input-group-addon">$</div>
             <input type="text" ng-model="amount" class="form-control" id="inputAmount" placeholder="Amount">
             <div class="input-group-addon">.00</div>
           </div>
         </div>
-        <button type="submit" class="btn btn-success">Add</button>
+        <br>
+        <button type="submit" class="btn btn-success">
+          <i class="fa fa-plus" id="white-fa" aria-hidden="true"></i>
+        </button>
       </form>
     </div>
 
     <div class="alert alert-warning" ng-show="errorMessage">
       <strong>Warning!</strong> The current cost exceeds the budget goal.
+    </div>
+
+    <div class="row" ng-show="estate">
+      <form class="form-inline col-md-10 col-md-offset-1" ng-submit="update(expenditure)" id="edit-budget-form">
+        <p>Edit Expenditure:</p>
+        <div id="updateExpenseTitle" class="form-group">
+          <label for="etitle">Expenditure: </label>
+          <input type="text" ng-model="expenditure.title" class="form-control" id="etitle" value="{{expenditure.title}}">
+        </div>
+        <div class="form-group" id="updateExpenseAmount">
+          <label for="eamount">Amount: </label>
+          <div class="input-group">
+            <div class="input-group-addon">$</div>
+            <input type="text" ng-model="expenditure.amount" class="form-control" name="emount" value="{{expenditure.amount}}">
+            <div class="input-group-addon">.00</div>
+          </div>
+        </div>
+        <button type="submit" id="updateExpense" class="btn btn-success">Update</button>
+      </form>
     </div>
 
     <div class="row">
@@ -51,13 +73,13 @@
             <td>{{expense.title}}</td>
             <td>{{expense.amount}}</td>
             <td><button ng-show="canDelete(expense)" ng-click="deleteExpenditure(expense)" class="btn btn-danger" >Delete</button></td>
-            <td><button ng-show="canEdit(expense)" ng-click="editExpenditure(expense)" class="btn btn-info" >Edit</button></td>
+            <td><button ng-show="canEdit(expense)" ng-click="editExpenditure(expense)" class="btn btn-info">Edit</button></td>
           </tr>
         </tbody>
       </table>
     </div>
 
-    <div class="row" ng-show="estate">
+    <!-- <div class="row" ng-show="estate">
       <b>Update information for {{expenditure.title}}</b>
       <br>
       <form name="listingForm" class="form-horizontal" ng-submit="update(expenditure)">
@@ -72,7 +94,7 @@
         <br>
         <button type="submit" id="updateExpense" class="btn btn-sucess">Update</button>
       </form>
-    </div>
+    </div> -->
 
   </div>
 </div>
