--- a/client/app/client/partials/manageEvent/manageEvent.html
+++ b/client/app/client/partials/manageEvent/manageEvent.html
@@ -97,19 +97,16 @@
                     </tbody>
                   </table>
                   <div id= "newContractor" class="col-md-11">
-                  <h4>Add New Subcontractor</h4>
+                  <h4>Add New Subcontractor </h4>
                   <form class = "row">
-                    <div class="form-group" show-errors>
-                      <label for="name">Name</label>
-                      <input name="name" type="name" ng-model="name"  class="form-control" required>
+                    <div class="form-group" >
+                      <label for="name">Name (required)</label>
+                      <input name="name" type="name" ng-model="name"  class="form-control">
                     </div>
-                    <div class="form-group" show-errors>
-                      <label for="link">Link</label>
-                      <input name="link" type="link" ng-model="link"  class="form-control" required>
+                    <div class="form-group" >
+                      <label for="link">Link </label>
+                      <input name="link" type="link" ng-model="link"  class="form-control" >
                     </div>
-                  <div ng-show="error" class="text-danger">
-                    <strong ng-bind="error"></strong>
-                  </div>
                   <label for="button">&zwnj;</label>
                   <button type="submit" class="btn btn-success btn-lg " ng-click="createNewContractor(name, link) ? name = link = null : null">Create Contractor</button>
                 </div>
