cleaned up commented out code and console.log statement

--- a/client/app/admin/partials/createPayment/createPayment.html
+++ b/client/app/admin/partials/createPayment/createPayment.html
@@ -7,7 +7,7 @@
     <div>
       <form class="form-horizontal novalidate col-md-8" name="form">
 
-        <!-- Div to input the event name -->
+        <!-- Div to input the payment description -->
         <div class="form-group row col-md-12" show-errors>
           <label for="paymentDesc">Payment description:</label>
           <input name="paymentDesc" type="paymentDesc" ng-model="paymentDesc" id="paymentDesc" class="form-control" required>
@@ -26,7 +26,7 @@
           </div>
         </div>
 
-        <!-- Div to input then amount  -->
+        <!-- Div to input the amount  -->
         <div class="form-group row col-md-12" show-errors>
           <label for="amount">Amount:</label>
           <input name="amount" type="amount" ng-model="amount" id="amount" class="form-control">
