--- a/client/app/admin/partials/manageLinks/manageLinks.html
+++ b/client/app/admin/partials/manageLinks/manageLinks.html
@@ -1,12 +1,12 @@
 <div class="row" ng-init="getLinks(); sort='name'">
-  <h1 class="page-header">Manage Links</h1>
+  <h1 class="page-header">Manage Vendors</h1>
   <div class = "form-group col-md-12" style="padding-left:0px;">
     <div class="col-md-5" style="padding-left:0px;">
       <input type="text" class="form-control" placeholder="Search here..." ng-model="searchLinks"></input>
     </div>
   </div>
   <tabset>
-    <tab heading="Links">
+    <tab heading="Vendors">
       <br>
       <table class="table table-hover hoverSort">
         <thead>
@@ -14,7 +14,7 @@
             <th ng-click="sort='type'"><b>Type</b></th>
             <th ng-click="sort='name'"><b>Name</b></th>
             <th ng-click="sort='phoneNumber'"><b>Phone Number</b></th>
-            <th ng-click="sort='url'"><b>Link</b></th>
+            <th ng-click="sort='url'"><b>Vendor</b></th>
             <th><b>Photo</b></th>
             <th></th>
           </tr>
@@ -33,7 +33,7 @@
       </table>
     </tab>
 
-    <tab heading="New Link">
+    <tab heading="New Vendor">
       <br>
       <form name="listingForm" class="form-horizontal col-md-8">
         <fieldset>
@@ -46,8 +46,8 @@
             <input name="name" type="name" ng-model="name" id="name" class="form-control" required>
           </div>
           <div class="form-group" show-errors>
-            <label for="link">Link</label>
-            <input name="link" type="link" ng-model="link" id="link" class="form-control" required>
+            <label for="link">Vendor</label>
+            <input name="link" type="link" ng-model="link" id="link" class="form-control" placeholder="e.g. website.com" required>
           </div>
           <div class="form-group" show-errors>
             <label for="link">Phone Number</label>
@@ -62,7 +62,7 @@
           </div>
           <div><br>
             <button class="btn btn-inverse btn-lg btn-register" type="submit" ng-click="listingForm.$valid && submit(type, name, link, phoneNumber, imageUrl)">
-              Create Link
+              Create Vendor
             </button>
           </div>
         </fieldset>
