--- a/client/app/superAdmin/partials/manageEvent/manageEvent.html
+++ b/client/app/superAdmin/partials/manageEvent/manageEvent.html
@@ -25,7 +25,8 @@
                       <td>{{event.userName || '----'}}</td>
                       <td>{{event.locationName}}</td>
                       <td>{{event.date.substring(5,10) + '-' + event.date.substring(0,4)}}</td>
-                      <td><button type="button" class="btn btn-md btn-default" ng-click="openModal(event)">Manage</button></td>
+                      <td><button type="button" class="btn btn-md btn-default" ng-click="openModal(event)">Manage</button>
+                          <button type="button" class="btn btn-md btn-default" ng-click="viewGuests(event)">Manage Guests</button></td>
                     </tr>
                   </tbody>
                 </table>
@@ -43,7 +44,6 @@
                               <th></td>
                               </tr>
                             </thead>
-
                             <tbody>
                               <tr ng-repeat="event in events | filter: searchEvents |filter: filterPast() | orderBy: sort">
                                 <td>{{event.name}}</td>
