--- a/client/app/superAdmin/partials/viewGuestList/viewGuestList.html
+++ b/client/app/superAdmin/partials/viewGuestList/viewGuestList.html
@@ -1,7 +1,7 @@
 <div class = "container-fluid">
   <div ng-controller="viewGuestListCtrl" >
     <div class="page-header">
-      <h1> {{eve.name}} guest list:</h1>
+      <h1> {{eve.name}} Guest List:</h1>
     </div>
     <div class = "col-md-12" ng-init="sortGuest='name'">
       <div class="col-md-5" style="padding-left:0px;float: left;">
