updated ng-show/ng-hide for add/edit expenditure on viewBudget client page

--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div ng-hide="estate" class="row">
       <form ng-submit="addExpenditure()" class="form-inline col-md-10 col-md-offset-1" id="view-budget-form">
         <p>Add Expenditure:</p>
         <div class="form-group">
