--- a/client/app/client/partials/viewBudget/viewBudget.html
+++ b/client/app/client/partials/viewBudget/viewBudget.html
@@ -72,7 +72,7 @@
           <tr ng-repeat="expense in event.budget">
             <td>{{expense.title}}</td>
             <td>{{expense.amount}}</td>
-            <td><button ng-show="canEdit(expense)" ng-click="deleteExpenditure(expense)" class="btn btn-danger" >
+            <td><button ng-show="canEdit(expense)" ng-really-click="deleteExpenditure(expense)" ng-really-message="Are you sure you want to delete this expenditure?" class="btn btn-danger" >
               <i class="fa fa-trash-o" id="white-fa" aria-hidden="true"></i>
             </button></td>
             <td><button ng-show="canEdit(expense)" ng-click="editExpenditure(expense)" class="btn btn-info">
