Admin can only add Initial Fee Payments for $25

--- a/client/app/admin/partials/createPayment/createPayment.html
+++ b/client/app/admin/partials/createPayment/createPayment.html
@@ -9,8 +9,7 @@
 
         <!-- Div to input the event name -->
         <div class="form-group row col-md-12" show-errors>
-          <label for="paymentDesc">Payment description:</label>
-          <input name="paymentDesc" type="paymentDesc" ng-model="paymentDesc" id="paymentDesc" class="form-control" required>
+          <label for="paymentDesc">Payment Description: Initial Meeting Fee</label>
         </div>
 
         <!-- Div to input the date -->
@@ -28,8 +27,7 @@
 
         <!-- Div to input then amount  -->
         <div class="form-group row col-md-12" show-errors>
-          <label for="amount">Amount:</label>
-          <input name="amount" type="amount" ng-model="amount" id="amount" class="form-control">
+          <label for="amount">Amount: $25</label>
         </div>
         <!-- Submit button -->
         <div class="form-group row col-md-12">
