--- a/client/app/admin/partials/managePayment/managePaymentModal/managePaymentModal.html
+++ b/client/app/admin/partials/managePayment/managePaymentModal/managePaymentModal.html
@@ -7,8 +7,7 @@
           <form name="form">
             <!-- Div to input the payment description -->
             <div class="form-group row col-md-12" show-errors>
-              <label for="paymentDesc">Payment description:</label>
-              <input name="paymentDesc" type="paymentDesc" ng-model="payment.description" id="PaymentDesc" class="form-control" required>
+              <label for="paymentDesc">Payment Description: Initial Meeting Fee</label>
             </div>
 
             <!-- Div to input the due date -->
@@ -25,8 +24,7 @@
 
             <!-- Div to input the amount  -->
             <div class="form-group row col-md-12" show-errors>
-              <label for="amount">amount:</label>
-              <input name="amount" type="amount" ng-model="payment.amount" id="amount" class="form-control" required>
+              <label for="amount">Amount: $25.00</label>
             </div>
           </form>
 
