--- a/client/app/admin/partials/managePayment/managePaymentModal/managePaymentModal.html
+++ b/client/app/admin/partials/managePayment/managePaymentModal/managePaymentModal.html
@@ -33,7 +33,7 @@
       <div class="modal-footer" ng-if="hideDeleteTab" style="border-top: 0px;">
         <div class="col-md-12" style="padding-left:0px; padding-top:35px; text-align:left;">
           <button class="btn btn-success"  ng-click="submit()">Save Changes</button>
-          <button class = "btn btn-danger" ng-click="showDeleteTabFunc()">Delete Payment</button>
+          <button class = "btn btn-danger" ng-click="deletePayment()">Delete Payment</button>
 	  <button class="btn btn-default" ng-click="cancel()" style="float: right">Cancel</button>
         </div>
       </div>
