--- a/client/app/superAdmin/partials/viewGuestList/viewGuestList.html
+++ b/client/app/superAdmin/partials/viewGuestList/viewGuestList.html
@@ -1,5 +1,5 @@
 <div class = "container-fluid">
-  <div ng-controller="viewGuestListCtrl" >
+  <div ng-controller="viewGuestListCtrlSuper" >
     <div class="page-header">
       <h1> {{eve.name}} Guest List:</h1>
     </div>
