--- a/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
+++ b/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
@@ -1,28 +1,28 @@
 <div>
   <tabset justified="true">
-    <tab heading="Manage Account">
+    <tab heading="Manage User">
 
       <div ng-if="!(deleteHTML)">
-        <h2 class="modal-header">Account information:</h2>
+        <h2 class="modal-header">Client information:</h2>
         <div class="modal-body">
           <container>
             <form class = "form" name="form" ng-submit="submit(username, email, phoneNumber)" novalidate>
               <div class="form-group">
-                <label for="username">Account name</label>
+                <label for="username">Client name</label>
                 <input type="text" class="form-control" name="username" ng-model="username" placeholder={{username}}>
               </div>
               <div class="form-group">
-                <label for="email">Account email</label>
+                <label for="email">Client email</label>
                 <input type="text" class="form-control" name="email" ng-model="email" placeholder={{email}}>
               </div>
               <div class="form-group">
-                <label for="phoneNumber">Account phone number</label>
+                <label for="phoneNumber">Client phone number</label>
                 <input type="text" class="form-control" name="phoneNumber" ng-model="phoneNumber" placeholder={{phoneNumber}}>
               </div>
               <div>
                 <button type="submit" id="submit" class="btn btn-success">Save Changes</button>
                 <button id="delete" class="btn btn-danger" ng-click="toggleDeleteUser()">Delete</button>
-		            <button class="btn btn-default" ng-click="cancel()" style="float: right">Cancel</button>
+		<button class="btn btn-default" ng-click="cancel()" style="float: right">Cancel</button>
               </div>
             </form>
 
@@ -62,6 +62,25 @@
             <td>{{event.name}}</td>
             <td>{{event.locationName}}</td>
             <td>{{event.budgetGoal}}</td>
+          </tr>
+        </table>
+      </div>
+    </tab>
+
+    <tab heading="Manage Payments" ng-init="getPayments()" ng-click="refreshDeleteUserHTML()" id="managePayments">
+      <h2 class="modal-header">Client payments:</h2>
+      <div class="modal-body">
+        <button class="btn btn-lg btn-block btn-success" ng-click="createPayment()">Create Payment</button>
+        <table class="table table-hover" ng-hide="payments == null">
+          <tr>
+            <th>Fees</th>
+            <th>Due Date</th>
+            <th>Amount</th>
+          </tr>
+          <tr ng-repeat="payment in payments" ng-click="managePayment(payment)">
+            <td>{{payment.description}}</td>
+            <td>{{payment.dueDate}}</td>
+            <td>{{payment.amount}}</td>
           </tr>
         </table>
       </div>
