--- a/client/app/admin/partials/manageContractors/manageContractorModal/manageContractorModal.html
+++ b/client/app/admin/partials/manageContractors/manageContractorModal/manageContractorModal.html
@@ -13,6 +13,7 @@
   <div class="modal-footer" style="text-align:left">
     <button class="btn btn-success" ng-click="submit()">Save Changes</button>
     <button class = "btn btn-danger" ng-click="showDeleteTabFunc()">Delete Contractor</button>
+  </div>
 </div>
 <div  ng-if="!hideDeleteTab">
   <h2 class = "modal-header text-center">
