--- a/client/app/superAdmin/partials/managePayment/managePaymentModal/managePaymentModal.html
+++ b/client/app/superAdmin/partials/managePayment/managePaymentModal/managePaymentModal.html
@@ -1,16 +1,16 @@
-<div id="managePaymentModal" ng-click="resetPicker()">
+<!-- <div id="managePaymentModal" ng-click="resetPicker()">
   <tabset justified="true">
     <tab heading="Basic Info" ng-if="hideDeleteTab">
       <h2 class="modal-header">Payment information:</h2>
       <div class="modal-body">
         <div class = "">
           <form name="form">
-            <!-- Div to input the payment description -->
+
             <div class="form-group row col-md-12" show-errors>
               <label for="paymentDesc">Payment Description: Initial Meeting Fee</label>
             </div>
 
-            <!-- Div to input the due date -->
+
             <div id="dateTime" class="form-group row col-md-12" show-errors>
               <div class = "col-md-6" style="padding-left: 0px;">
                 <label for="dateOfPayment">Due Date:</label>
@@ -22,7 +22,7 @@
                 </div>
               </div>
 
-            <!-- Div to input the amount  -->
+
             <div class="form-group row col-md-12" show-errors>
               <label for="amount">Amount: $25.00</label>
             </div>
@@ -58,5 +58,5 @@
 
   </tabset>
 
-  <!-- WHERE FOOTER USED TO BE -->
-</div>
+
+</div> -->
