--- a/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
+++ b/client/app/superAdmin/partials/manageAccounts/manageAccountsModal/manageAccountsModal.html
@@ -67,7 +67,7 @@
       </div>
     </tab>
 
-    <tab heading="Manage Payments" ng-init="getPayments()" ng-click="refreshDeleteUserHTML()" id="managePayments">
+    <!-- <tab heading="Manage Payments" ng-init="getPayments()" ng-click="refreshDeleteUserHTML()" id="managePayments">
       <h2 class="modal-header">Client payments:</h2>
       <div class="modal-body">
         <button class="btn btn-lg btn-block btn-success" ng-click="createPayment()">Create Payment</button>
@@ -84,6 +84,6 @@
           </tr>
         </table>
       </div>
-    </tab>
+    </tab> -->
   </tabset>
 </div>
